<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"

    tools:openDrawer="end">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/tab_bar_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/image_header"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:fitsSystemWindows="true"
                android:contentDescription="@string/content_description_tab_logo"
                android:scaleType="fitXY" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:alpha="0.6"
                android:background="#FF9800"
                android:contentDescription="@string/content_description_tab_logo"
                android:fitsSystemWindows="true"
                android:scaleType="fitXY" />

            <android.support.design.widget.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:theme="@style/MyMaterialTheme">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="75dp"
                    android:background="@color/transparent"
                    app:popupTheme="@style/AppTheme.PopupOverlay" />

                <android.support.design.widget.TabLayout

                    android:id="@+id/tabs"
                    android:layout_width="match_parent"
                    android:layout_height="75dp"
                    android:background="@color/transparent"
                    app:tabGravity="fill"
                    app:tabMode="fixed"
                    app:tabTextAppearance="@style/TabLayoutStyle"
                    app:tabSelectedTextColor="@color/toolbar_text_color"
                    app:tabTextColor="@color/toolbar_text_color" />

            </android.support.design.widget.AppBarLayout>
        </RelativeLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/viewpager_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/tab_bar_content"
            android:fitsSystemWindows="true"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical">

            <ikigaiworks.letseat.ui.view.customview.CartFloatingButton_
                android:id="@+id/cart_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:elevation="20dp"
                android:clickable="true"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:focusable="true" />

            <android.support.v4.view.ViewPager
                android:id="@+id/viewpager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>
    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"

        app:menu="@menu/activity_main_drawer" />

</android.support.v4.widget.DrawerLayout>
