<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="java.lang.String"/>
        <variable
            name="producto"
                type="ikigaiworks.letseat.model.ProductToCart" />
        <variable
            name="fragment_cart"
            type="ikigaiworks.letseat.ui.view.fragments.cart.FragmentCartList" />

    </data>


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/border_style">


        <ImageView
            android:id="@+id/product_image"
            android:layout_width="80dp"
            android:layout_height="77dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:src="@{producto.image}"
            android:contentDescription="@string/content_description_cart_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:src="@drawable/product" />

        <TextView
            android:id="@+id/product_name"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:autoSizeTextType="uniform"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@{producto.name}"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.127"
            app:layout_constraintStart_toEndOf="@+id/product_image"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Desayuno Americano" />

        <TextView
            android:id="@+id/product_extras"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="4dp"
            android:autoSizeTextType="uniform"
            android:textSize="12sp"
            android:visibility="@{producto}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/product_name"
            app:layout_constraintTop_toBottomOf="@+id/product_name"
            bind:text="@{producto.extra}"
            tools:text="Extras: Café expresso y huevos fritos" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="16dp"
            android:autoSizeTextType="uniform"
            android:text="@string/price"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Price:" />

        <ikigaiworks.letseat.ui.view.customview.PriceTextView
            android:id="@+id/product_prize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="8dp"
            android:text="@{String.valueOf(safeUnbox(producto.price))}"
            android:textColor="@color/colorPrimary"
            android:textSize="23sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            tools:text="19.05" />

        <LinearLayout
            android:id="@+id/delete_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.129"
            android:onClick="@{() -> fragment_cart.removeItem(producto)}">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:textSize="16sp"
                android:paddingTop="2dp"
                android:textStyle="bold"
                tools:text="Delete" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:contentDescription="@string/content_description_delete_image"
                android:src="@drawable/ic_delete_black_24dp" />


        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:theme="@style/AppTheme"
            android:id="@+id/AddProductAmount"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            app:fabSize="mini"
            android:src="@drawable/ic_add_white_24dp"
            android:scaleType="center"
            app:rippleColor="@color/colorPrimary"
            android:clickable="true"
            android:onClick="@{() -> fragment_cart.addToQuantity(producto)}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.914"
            android:focusable="true" />

        <android.support.design.widget.FloatingActionButton
            android:theme="@style/AppTheme"
            android:id="@+id/removeProductAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fabSize="mini"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="8dp"
            android:scaleType="center"
            app:rippleColor="@color/colorPrimary"
            android:clickable="true"
            android:src="@drawable/ic_remove_white_24dp"
            android:onClick="@{() -> fragment_cart.removeFromQuantity(producto)}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/AddProductAmount"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.914"
            android:focusable="true" />

        <TextView
            android:id="@+id/quantity"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="72dp"
            android:background="@drawable/circle"
            android:elevation="6dp"
            android:paddingTop="3dp"
            android:text="@{String.valueOf(safeUnbox(producto.quantity))}"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="6pt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="1" />

    </android.support.constraint.ConstraintLayout>

</layout>